--- a/.env.dev
+++ b/.env.dev
@@ -1,10 +1,10 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
-DB_HOST=localhost
+DB_HOST=44.203.172.16
 DB_DATABASE='Insigna'
 DB_USER='root'
-DB_PASSWORD='25117195'
+DB_PASSWORD='urubu100'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
