--- a/.env.dev
+++ b/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='Insigna'
 DB_USER='root'
-DB_PASSWORD='25117195'
+DB_PASSWORD='Msessu04.'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
